--- a/a-l-francaise.html
+++ b/a-l-francaise.html
@@ -19,177 +19,183 @@
             <div class="bloc-logo">
                 <div class="icon-back">
                     <a id="back" href="index.html"> <i class="fa-solid fa-arrow-left fa-xl fa-xl1"></i></a>
-                 </div>
+                </div>
                 <img class="logo" src="images/logo/ohmyfood@2x.svg" alt="">
                 <div class="empty-div"></div>
             </div>
-        <img class="size-img" src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="">
-    </header>
-    <main>
+            <img class="size-img" src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="">
+        </header>
+        <main>
 
-        <div>
             <div class="menu">
                 <div class="loader-wrapper">
                     <div class="loader-container">
-                      <div class="dot d1"></div>
-                      <div class="dot d2"></div>
-                      <div class="dot d3"></div>
+                        <div class="dot d1"></div>
+                        <div class="dot d2"></div>
+                        <div class="dot d3"></div>
                     </div>
-                  </div>
-            <div class="flex">
-               <div class="header-container">
-                <div class="title"> <h1 class="title-restau"> A la francaise</h1></div>
-                <div class="heart-btn heart-btn--accent">
-                    <i class="heart-btn__empty fa-regular fa-heart"></i>
-                    <i class="heart-btn__filled fa-solid fa-heart"></i>
+                </div>
+                <div class="flex">
+                    <div class="header-container">
+                        <div class="title">
+                            <h1 class="title-restau"> A la francaise</h1>
+                        </div>
+                        <div class="heart-btn heart-btn--accent">
+                            <i class="heart-btn__empty fa-regular fa-heart"></i>
+                            <i class="heart-btn__filled fa-solid fa-heart"></i>
+                        </div>
+                    </div>
+                </div>
+                <div class="entr">
+                    <p class="upper">
+                        Entrées
+                    </p>
+                    <div class="food-item">
+                        <div>
+                            <p class="marge1">Tartare de poulpe acidulé</p>
+                            <p class="marge2">Aux zestes d'orange</p>
+                        </div>
+                        <div class="price-check-container">
+                            <div class="price">25 €</div>
+                            <div class="check">
+                                <i class="far fa-check-circle fa-lg"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="food-item">
+                        <div>
+                            <p class="marge1">Velouté de légumes d'antan</p>
+                            <p class="marge2">Carotte, panais, topinambour</p>
+                        </div>
+                        <div class="price-check-container">
+                            <div class="price">35 €</div>
+                            <div class="check">
+                                <i class="far fa-check-circle fa-lg"></i>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="food-item">
+                        <div>
+                            <p class="marge1">Soupe à l'oignon</p>
+                            <p class="marge2">Revisitée</p>
+                        </div>
+                        <div class="price-check-container">
+                            <div class="price">20 €</div>
+                            <div class="check">
+                                <i class="far fa-check-circle fa-lg"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="plats">
+                        <p class="upper">
+                            PLATS
+                        </p>
+                        <div class="food-item">
+                            <div>
+                                <p class="marge1">Coquilles Saint-Jacques</p>
+                                <p class="marge2">Accompagnées d'une purée de panais</p>
+                            </div>
+                            <div class="price-check-container">
+                                <div class="price">40 €</div>
+                                <div class="check">
+                                    <i class="far fa-check-circle fa-lg"></i>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="food-item">
+                            <div>
+                                <p class="marge1">Magret de canard</p>
+                                <p class="marge2">Et parmentier de pommes de terre</p>
+                            </div>
+                            <div class="price-check-container">
+                                <div class="price">35 €</div>
+                                <div class="check">
+                                    <i class="far fa-check-circle fa-lg"></i>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="food-item">
+                            <div>
+                                <p class="marge1">Pigeonneau d'Ille-et-Vilaine</p>
+                                <p class="marge2">Sur son lit gnocchis aux légumes</p>
+                            </div>
+                            <div class="price-check-container">
+                                <div class="price">44 €</div>
+                                <div class="check">
+                                    <i class="far fa-check-circle fa-lg"></i>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="desserts">
+                            <p class="upper">
+                                DESSERTS
+                            </p>
+
+                            <div class="food-item">
+                                <div>
+                                    <p class="marge1">Pétales de violettes glacés</p>
+                                    <p class="marge2">Et purée de noisettes</p>
+                                </div>
+                                <div class="price-check-container">
+                                    <div class="price">18 €</div>
+                                    <div class="check">
+                                        <i class="far fa-check-circle fa-lg"></i>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="food-item">
+                                <div>
+                                    <p class="marge1">Fondant au chocolat</p>
+                                    <p class="marge2">Revisité</p>
+                                </div>
+                                <div class="price-check-container">
+                                    <div class="price">22 €</div>
+                                    <div class="check">
+                                        <i class="far fa-check-circle fa-lg"></i>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="food-item">
+                                <div>
+                                    <p class="marge1">Millefeuille croustillant</p>
+                                    <p class="marge2">Myrtilles et pâte d'amande</p>
+                                </div>
+                                <div class="price-check-container">
+                                    <div class="price">23 €</div>
+                                    <div class="check">
+                                        <i class="far fa-check-circle fa-lg"></i>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="button">Commander</div>
+                    </div>
+
+
                 </div>
             </div>
-            </div>
-
-            <div class="entr">
-                <p class="upper">
-                    Entrées
-                </p>
-                <div class="food-item">
-                    <div>
-                        <p class="marge1">Tartare de poulpe acidulé</p>
-                        <p class="marge2">Aux zestes d'orange</p>
-                    </div>
-                    <div class="price-check-container">
-                        <div class="price">25 €</div>
-                        <div class="check">
-                            <i class="far fa-check-circle fa-lg"></i>
-                        </div>
-                    </div>
-                </div>
-                <div class="food-item">
-                    <div>
-                        <p class="marge1">Velouté de légumes d'antan</p>
-                        <p class="marge2">Carotte, panais, topinambour</p>
-                    </div>
-                    <div class="price-check-container">
-                        <div class="price">35 €</div>
-                        <div class="check">
-                            <i class="far fa-check-circle fa-lg"></i>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="food-item">
-                    <div>
-                        <p class="marge1">Soupe à l'oignon</p>
-                        <p class="marge2">Revisitée</p>
-                    </div>
-                    <div class="price-check-container">
-                        <div class="price">20 €</div>
-                        <div class="check">
-                            <i class="far fa-check-circle fa-lg"></i>
-                        </div>
-                    </div>
-                </div>
-                <div class="plats">
-                <p class="upper">
-                    PLATS
-                </p>
-                <div class="food-item">
-                    <div>
-                        <p class="marge1">Coquilles Saint-Jacques</p>
-                        <p class="marge2">Accompagnées d'une purée de panais</p>
-                    </div>
-                    <div class="price-check-container">
-                        <div class="price">40 €</div>
-                        <div class="check">
-                            <i class="far fa-check-circle fa-lg"></i>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="food-item">
-                    <div>
-                        <p class="marge1">Magret de canard</p>
-                        <p class="marge2">Et parmentier de pommes de terre</p>
-                    </div>
-                    <div class="price-check-container">
-                        <div class="price">35 €</div>
-                        <div class="check">
-                            <i class="far fa-check-circle fa-lg"></i>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="food-item">
-                    <div>
-                        <p class="marge1">Pigeonneau d'Ille-et-Vilaine</p>
-                        <p class="marge2">Sur son lit gnocchis aux légumes</p>
-                    </div>
-                    <div class="price-check-container">
-                        <div class="price">44 €</div>
-                        <div class="check">
-                            <i class="far fa-check-circle fa-lg"></i>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="desserts">
-                <p class="upper">
-                    DESSERTS
-                </p>
-
-                <div class="food-item">
-                    <div>
-                        <p class="marge1">Pétales de violettes glacés</p>
-                        <p class="marge2">Et purée de noisettes</p>
-                    </div>
-                    <div class="price-check-container">
-                        <div class="price">18 €</div>
-                        <div class="check">
-                            <i class="far fa-check-circle fa-lg"></i>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="food-item">
-                    <div>
-                        <p class="marge1">Fondant au chocolat</p>
-                        <p class="marge2">Revisité</p>
-                    </div>
-                    <div class="price-check-container">
-                        <div class="price">22 €</div>
-                        <div class="check">
-                            <i class="far fa-check-circle fa-lg"></i>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="food-item">
-                    <div>
-                        <p class="marge1">Millefeuille croustillant</p>
-                        <p class="marge2">Myrtilles et pâte d'amande</p>
-                    </div>
-                    <div class="price-check-container">
-                        <div class="price">23 €</div>
-                        <div class="check">
-                            <i class="far fa-check-circle fa-lg"></i>
-                        </div>
-                    </div>
-                </div>
-            
-
-            <div class="button">Commander</div>
-        </div>
-
-
-    </div>
-    </main>
-           <!-- FOOTER -->
-           <footer class="flex-desktop">
+        </main>
+        <!-- FOOTER -->
+        <footer class="flex-desktop">
             <div class="logo-footer"> ohmyfood </div>
-               <div class="footer1 reverse"> <p><i class="fa-solid fa-utensils icon-footer"></i> Proposer un restaurant</p> </div> 
-               <div class="footer2 reverse">  <p><i class="fa-solid fa-handshake-angle icon-footer"></i> Devenir partenaire</p> </div> 
-                <p class="footer3">Mention légales</p>
-                <p class="footer4"> <a href="mailto:contact@ohmyfood.com">Contact</a></p>
+            <div class="footer1 reverse">
+                <p><i class="fa-solid fa-utensils icon-footer"></i> Proposer un restaurant</p>
+            </div>
+            <div class="footer2 reverse">
+                <p><i class="fa-solid fa-handshake-angle icon-footer"></i> Devenir partenaire</p>
+            </div>
+            <p class="footer3">Mention légales</p>
+            <p class="footer4"> <a href="mailto:contact@ohmyfood.com">Contact</a></p>
         </footer>
     </div>
     <div class="overlay"></div>
 </body>
+
 </html>
