--- a/palette.html
+++ b/palette.html
@@ -15,38 +15,39 @@
 </head>
 
 <body>
-        <header>
-            <div class="bloc-logo">
-                <div class="icon-back">
-                   <a id="back" href="index.html"> <i class="fa-solid fa-arrow-left fa-xl fa-xl1"></i></a>
-                </div>
-                <img class="logo" src="images/logo/ohmyfood@2x.svg" alt="">
-                <div class="empty-div"></div>
+    <header>
+        <div class="bloc-logo">
+            <div class="icon-back">
+                <a id="back" href="index.html"> <i class="fa-solid fa-arrow-left fa-xl fa-xl1"></i></a>
             </div>
-    </div>
-    <div class="size-img">
-        <img class="size-img" src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="">
-    </div>
+            <img class="logo" src="images/logo/ohmyfood@2x.svg" alt="">
+            <div class="empty-div"></div>
+        </div>
+        <div class="size-img">
+            <img class="size-img" src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="">
+        </div>
     </header>
     <main>
         <div class="menu">
             <div class="loader-wrapper">
                 <div class="loader-container">
-                  <div class="dot d1"></div>
-                  <div class="dot d2"></div>
-                  <div class="dot d3"></div>
+                    <div class="dot d1"></div>
+                    <div class="dot d2"></div>
+                    <div class="dot d3"></div>
                 </div>
-              </div>
-              <div class="flex">
+            </div>
+            <div class="flex">
                 <div class="header-container">
-                 <div class="title"> <h1 class="title-restau"> La palette du goût</h1></div>
-                 <div class="heart-btn heart-btn--accent">
-                     <i class="heart-btn__empty fa-regular fa-heart"></i>
-                     <i class="heart-btn__filled fa-solid fa-heart"></i>
-                 </div>
-             </div>
-             </div>
-            
+                    <div class="title">
+                        <h1 class="title-restau"> La palette du goût</h1>
+                    </div>
+                    <div class="heart-btn heart-btn--accent">
+                        <i class="heart-btn__empty fa-regular fa-heart"></i>
+                        <i class="heart-btn__filled fa-solid fa-heart"></i>
+                    </div>
+                </div>
+            </div>
+
 
             <div class="entr">
                 <p class="upper">
@@ -64,39 +65,39 @@
                         </div>
                     </div>
                 </div>
-
-                <div class="food-item">
-                    <div>
-                        <p class="marge1">Foie gras de canard mi-cuit</p>
-                        <p class="marge2">Et ses copeaux de truffe noire</p>
-                    </div>
-                    <div class="price-check-container">
-                        <div class="price">35 €</div>
-                        <div class="check">
-                            <i class="far fa-check-circle fa-lg"></i>
-                        </div>
+            </div>
+            <div class="food-item">
+                <div>
+                    <p class="marge1">Foie gras de canard mi-cuit</p>
+                    <p class="marge2">Et ses copeaux de truffe noire</p>
+                </div>
+                <div class="price-check-container">
+                    <div class="price">35 €</div>
+                    <div class="check">
+                        <i class="far fa-check-circle fa-lg"></i>
                     </div>
                 </div>
+            </div>
 
-                <div class="food-item">
-                    <div>
-                        <p class="marge1">Oeuf au plat</p>
-                        <p class="marge2">Assaisonné à la truffe sur lit de caviar</p>
-                    </div>
-                    <div class="price-check-container">
-                        <div class="price">20 €</div>
-                        <div class="check">
-                            <i class="far fa-check-circle fa-lg"></i>
-                        </div>
+            <div class="food-item">
+                <div>
+                    <p class="marge1">Oeuf au plat</p>
+                    <p class="marge2">Assaisonné à la truffe sur lit de caviar</p>
+                </div>
+                <div class="price-check-container">
+                    <div class="price">20 €</div>
+                    <div class="check">
+                        <i class="far fa-check-circle fa-lg"></i>
                     </div>
                 </div>
+            </div>
 
-                <div class="plats">
+            <div class="plats">
                 <p class="upper">
                     PLATS
                 </p>
 
-                   <div class="food-item">
+                <div class="food-item">
                     <div>
                         <p class="marge1">Filet de boeuf aux herbes</p>
                         <p class="marge2">Accompagné de sa ribambelle de légumes</p>
@@ -136,64 +137,69 @@
                 </div>
 
                 <div class="desserts">
-                <p class="upper">
-                    DESSERTS
-                </p>
+                    <p class="upper">
+                        DESSERTS
+                    </p>
 
-                <div class="food-item">
-                    <div>
-                        <p class="marge1">Paris-Brest</p>
-                        <p class="marge2">Revisité</p>
+                    <div class="food-item">
+                        <div>
+                            <p class="marge1">Paris-Brest</p>
+                            <p class="marge2">Revisité</p>
+                        </div>
+                        <div class="price-check-container">
+                            <div class="price">18 €</div>
+                            <div class="check">
+                                <i class="far fa-check-circle fa-lg"></i>
+                            </div>
+                        </div>
                     </div>
-                    <div class="price-check-container">
-                        <div class="price">18 €</div>
-                        <div class="check">
-                            <i class="far fa-check-circle fa-lg"></i>
+
+                    <div class="food-item">
+                        <div>
+                            <p class="marge1">Macaron au chocolat d'exception</p>
+                            <p class="marge2">Et glace à la vanille de Madagascar</p>
+                        </div>
+                        <div class="price-check-container">
+                            <div class="price">22 €</div>
+                            <div class="check">
+                                <i class="far fa-check-circle fa-lg"></i>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="food-item">
+                        <div>
+                            <p class="marge1">Mousse au chocolat</p>
+                            <p class="marge2">Au piment d'Espelette et à la truffe noire</p>
+                        </div>
+                        <div class="price-check-container">
+                            <div class="price">23 €</div>
+                            <div class="check">
+                                <i class="far fa-check-circle fa-lg"></i>
+                            </div>
                         </div>
                     </div>
                 </div>
-
-                <div class="food-item">
-                    <div>
-                        <p class="marge1">Macaron au chocolat d'exception</p>
-                        <p class="marge2">Et glace à la vanille de Madagascar</p>
-                    </div>
-                    <div class="price-check-container">
-                        <div class="price">22 €</div>
-                        <div class="check">
-                            <i class="far fa-check-circle fa-lg"></i>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="food-item">
-                    <div>
-                        <p class="marge1">Mousse au chocolat</p>
-                        <p class="marge2">Au piment d'Espelette et à la truffe noire</p>
-                    </div>
-                    <div class="price-check-container">
-                        <div class="price">23 €</div>
-                        <div class="check">
-                            <i class="far fa-check-circle fa-lg"></i>
-                        </div>
-                    </div>
-                </div>
-
+            </div>
             <div class="button">Commander</div>
 
 
-            </div>
-    </main>
-               <!-- FOOTER -->
-               <footer class="flex-desktop">
-                <div></div>
-                <div class="logo-footer"> ohmyfood </div>
-                   <div class="footer1 reverse"> <p><i class="fa-solid fa-utensils icon-footer"></i> Proposer un restaurant</p> </div> 
-                   <div class="footer2 reverse">  <p><i class="fa-solid fa-handshake-angle icon-footer"></i> Devenir partenaire</p> </div> 
-                    <p class="footer3">Mention légales</p>
-                    <p class="footer4"> <a href="mailto:contact@ohmyfood.com">Contact</a></p>
-            </footer>
         </div>
-        <div class="overlay"></div>
-    </body>
-    </html>
+    </main>
+    <!-- FOOTER -->
+    <footer class="flex-desktop">
+        <div></div>
+        <div class="logo-footer"> ohmyfood </div>
+        <div class="footer1 reverse">
+            <p><i class="fa-solid fa-utensils icon-footer"></i> Proposer un restaurant</p>
+        </div>
+        <div class="footer2 reverse">
+            <p><i class="fa-solid fa-handshake-angle icon-footer"></i> Devenir partenaire</p>
+        </div>
+        <p class="footer3">Mention légales</p>
+        <p class="footer4"> <a href="mailto:contact@ohmyfood.com">Contact</a></p>
+    </footer>
+    <div class="overlay"></div>
+</body>
+
+</html>
