fichier texte ajouté, check modifié et re-size du food item

--- a/a-l-francaise.html
+++ b/a-l-francaise.html
@@ -58,7 +58,7 @@
                         <div class="price-check-container">
                             <div class="price">25 €</div>
                             <div class="check">
-                                <i class="far fa-check-circle fa-lg"></i>
+                                <i class="fas fa-check-circle fa-lg"></i>
                             </div>
                         </div>
                     </div>
@@ -70,7 +70,7 @@
                         <div class="price-check-container">
                             <div class="price">35 €</div>
                             <div class="check">
-                                <i class="far fa-check-circle fa-lg"></i>
+                                <i class="fas fa-check-circle fa-lg"></i>
                             </div>
                         </div>
                     </div>
@@ -83,7 +83,7 @@
                         <div class="price-check-container">
                             <div class="price">20 €</div>
                             <div class="check">
-                                <i class="far fa-check-circle fa-lg"></i>
+                                <i class="fas fa-check-circle fa-lg"></i>
                             </div>
                         </div>
                     </div>
@@ -99,7 +99,7 @@
                             <div class="price-check-container">
                                 <div class="price">40 €</div>
                                 <div class="check">
-                                    <i class="far fa-check-circle fa-lg"></i>
+                                    <i class="fas fa-check-circle fa-lg"></i>
                                 </div>
                             </div>
                         </div>
@@ -112,7 +112,7 @@
                             <div class="price-check-container">
                                 <div class="price">35 €</div>
                                 <div class="check">
-                                    <i class="far fa-check-circle fa-lg"></i>
+                                    <i class="fas fa-check-circle fa-lg"></i>
                                 </div>
                             </div>
                         </div>
@@ -125,7 +125,7 @@
                             <div class="price-check-container">
                                 <div class="price">44 €</div>
                                 <div class="check">
-                                    <i class="far fa-check-circle fa-lg"></i>
+                                    <i class="fas fa-check-circle fa-lg"></i>
                                 </div>
                             </div>
                         </div>
@@ -143,7 +143,7 @@
                                 <div class="price-check-container">
                                     <div class="price">18 €</div>
                                     <div class="check">
-                                        <i class="far fa-check-circle fa-lg"></i>
+                                        <i class="fas fa-check-circle fa-lg"></i>
                                     </div>
                                 </div>
                             </div>
@@ -156,7 +156,7 @@
                                 <div class="price-check-container">
                                     <div class="price">22 €</div>
                                     <div class="check">
-                                        <i class="far fa-check-circle fa-lg"></i>
+                                        <i class="fas fa-check-circle fa-lg"></i>
                                     </div>
                                 </div>
                             </div>
@@ -169,7 +169,7 @@
                                 <div class="price-check-container">
                                     <div class="price">23 €</div>
                                     <div class="check">
-                                        <i class="far fa-check-circle fa-lg"></i>
+                                        <i class="fas fa-check-circle fa-lg"></i>
                                     </div>
                                 </div>
                             </div>
