--- a/delice.html
+++ b/delice.html
@@ -58,7 +58,7 @@
                         <div class="price-check-container">
                             <div class="price">25 €</div>
                             <div class="check">
-                                <i class="far fa-check-circle fa-lg"></i>
+                                <i class="fas fa-check-circle fa-lg"></i>
                             </div>
                         </div>
                     </div>
@@ -72,7 +72,7 @@
                     <div class="price-check-container">
                         <div class="price">35 €</div>
                         <div class="check">
-                            <i class="far fa-check-circle fa-lg"></i>
+                            <i class="fas fa-check-circle fa-lg"></i>
                         </div>
                     </div>
                 </div>
@@ -85,7 +85,7 @@
                     <div class="price-check-container">
                         <div class="price">40 €</div>
                         <div class="check">
-                            <i class="far fa-check-circle fa-lg"></i>
+                            <i class="fas fa-check-circle fa-lg"></i>
                         </div>
                     </div>
                 </div>
@@ -102,7 +102,7 @@
                         <div class="price-check-container">
                             <div class="price">40 €</div>
                             <div class="check">
-                                <i class="far fa-check-circle fa-lg"></i>
+                                <i class="fas fa-check-circle fa-lg"></i>
                             </div>
                         </div>
                     </div>
@@ -115,7 +115,7 @@
                         <div class="price-check-container">
                             <div class="price">35 €</div>
                             <div class="check">
-                                <i class="far fa-check-circle fa-lg"></i>
+                                <i class="fas fa-check-circle fa-lg"></i>
                             </div>
                         </div>
                     </div>
@@ -128,7 +128,7 @@
                         <div class="price-check-container">
                             <div class="price">44 €</div>
                             <div class="check">
-                                <i class="far fa-check-circle fa-lg"></i>
+                                <i class="fas fa-check-circle fa-lg"></i>
                             </div>
                         </div>
                     </div>
@@ -146,7 +146,7 @@
                             <div class="price-check-container">
                                 <div class="price">76 €</div>
                                 <div class="check">
-                                    <i class="far fa-check-circle fa-lg"></i>
+                                    <i class="fas fa-check-circle fa-lg"></i>
                                 </div>
                             </div>
                         </div>
@@ -159,7 +159,7 @@
                             <div class="price-check-container">
                                 <div class="price">22 €</div>
                                 <div class="check">
-                                    <i class="far fa-check-circle fa-lg"></i>
+                                    <i class="fas fa-check-circle fa-lg"></i>
                                 </div>
                             </div>
                         </div>
@@ -172,7 +172,7 @@
                             <div class="price-check-container">
                                 <div class="price">23 €</div>
                                 <div class="check">
-                                    <i class="far fa-check-circle fa-lg"></i>
+                                    <i class="fas fa-check-circle fa-lg"></i>
                                 </div>
                             </div>
                         </div>
