--- a/note.html
+++ b/note.html
@@ -63,7 +63,7 @@
                         <div class="price-check-container">
                             <div class="price">25 €</div>
                             <div class="check">
-                                <i class="far fa-check-circle fa-lg"></i>
+                                <i class="fas fa-check-circle fa-lg"></i>
                             </div>
                         </div>
                     </div>
@@ -77,7 +77,7 @@
                     <div class="price-check-container">
                         <div class="price">30 €</div>
                         <div class="check">
-                            <i class="far fa-check-circle fa-lg"></i>
+                            <i class="fas fa-check-circle fa-lg"></i>
                         </div>
                     </div>
                 </div>
@@ -90,7 +90,7 @@
                     <div class="price-check-container">
                         <div class="price">20 €</div>
                         <div class="check">
-                            <i class="far fa-check-circle fa-lg"></i>
+                            <i class="fas fa-check-circle fa-lg"></i>
                         </div>
                     </div>
                 </div>
@@ -103,7 +103,7 @@
                     <div class="price-check-container">
                         <div class="price">35 €</div>
                         <div class="check">
-                            <i class="far fa-check-circle fa-lg"></i>
+                            <i class="fas fa-check-circle fa-lg"></i>
                         </div>
                     </div>
                 </div>
@@ -120,7 +120,7 @@
                         <div class="price-check-container">
                             <div class="price">40 €</div>
                             <div class="check">
-                                <i class="far fa-check-circle fa-lg"></i>
+                                <i class="fas fa-check-circle fa-lg"></i>
                             </div>
                         </div>
                     </div>
@@ -133,7 +133,7 @@
                         <div class="price-check-container">
                             <div class="price">35 €</div>
                             <div class="check">
-                                <i class="far fa-check-circle fa-lg"></i>
+                                <i class="fas fa-check-circle fa-lg"></i>
                             </div>
                         </div>
                     </div>
@@ -146,7 +146,7 @@
                         <div class="price-check-container">
                             <div class="price">45 €</div>
                             <div class="check">
-                                <i class="far fa-check-circle fa-lg"></i>
+                                <i class="fas fa-check-circle fa-lg"></i>
                             </div>
                         </div>
                     </div>
@@ -164,7 +164,7 @@
                             <div class="price-check-container">
                                 <div class="price">18 €</div>
                                 <div class="check">
-                                    <i class="far fa-check-circle fa-lg"></i>
+                                    <i class="fas fa-check-circle fa-lg"></i>
                                 </div>
                             </div>
                         </div>
@@ -177,7 +177,7 @@
                             <div class="price-check-container">
                                 <div class="price">22 €</div>
                                 <div class="check">
-                                    <i class="far fa-check-circle fa-lg"></i>
+                                    <i class="fas fa-check-circle fa-lg"></i>
                                 </div>
                             </div>
                         </div>
@@ -190,7 +190,7 @@
                             <div class="price-check-container">
                                 <div class="price">23 €</div>
                                 <div class="check">
-                                    <i class="far fa-check-circle fa-lg"></i>
+                                    <i class="fas fa-check-circle fa-lg"></i>
                                 </div>
                             </div>
                         </div>
