--- a/palette.html
+++ b/palette.html
@@ -61,7 +61,7 @@
                     <div class="price-check-container">
                         <div class="price">25 €</div>
                         <div class="check">
-                            <i class="far fa-check-circle fa-lg"></i>
+                            <i class="fas fa-check-circle fa-lg"></i>
                         </div>
                     </div>
                 </div>
@@ -74,7 +74,7 @@
                 <div class="price-check-container">
                     <div class="price">35 €</div>
                     <div class="check">
-                        <i class="far fa-check-circle fa-lg"></i>
+                        <i class="fas fa-check-circle fa-lg"></i>
                     </div>
                 </div>
             </div>
@@ -87,7 +87,7 @@
                 <div class="price-check-container">
                     <div class="price">20 €</div>
                     <div class="check">
-                        <i class="far fa-check-circle fa-lg"></i>
+                        <i class="fas fa-check-circle fa-lg"></i>
                     </div>
                 </div>
             </div>
@@ -105,7 +105,7 @@
                     <div class="price-check-container">
                         <div class="price">40 €</div>
                         <div class="check">
-                            <i class="far fa-check-circle fa-lg"></i>
+                            <i class="fas fa-check-circle fa-lg"></i>
                         </div>
                     </div>
                 </div>
@@ -118,7 +118,7 @@
                     <div class="price-check-container">
                         <div class="price">35 €</div>
                         <div class="check">
-                            <i class="far fa-check-circle fa-lg"></i>
+                            <i class="fas fa-check-circle fa-lg"></i>
                         </div>
                     </div>
                 </div>
@@ -131,7 +131,7 @@
                     <div class="price-check-container">
                         <div class="price">44 €</div>
                         <div class="check">
-                            <i class="far fa-check-circle fa-lg"></i>
+                            <i class="fas fa-check-circle fa-lg"></i>
                         </div>
                     </div>
                 </div>
@@ -149,7 +149,7 @@
                         <div class="price-check-container">
                             <div class="price">18 €</div>
                             <div class="check">
-                                <i class="far fa-check-circle fa-lg"></i>
+                                <i class="fas fa-check-circle fa-lg"></i>
                             </div>
                         </div>
                     </div>
@@ -162,7 +162,7 @@
                         <div class="price-check-container">
                             <div class="price">22 €</div>
                             <div class="check">
-                                <i class="far fa-check-circle fa-lg"></i>
+                                <i class="fas fa-check-circle fa-lg"></i>
                             </div>
                         </div>
                     </div>
@@ -175,7 +175,7 @@
                         <div class="price-check-container">
                             <div class="price">23 €</div>
                             <div class="check">
-                                <i class="far fa-check-circle fa-lg"></i>
+                                <i class="fas fa-check-circle fa-lg"></i>
                             </div>
                         </div>
                     </div>
