modification height menus

--- a/index.html
+++ b/index.html
@@ -25,9 +25,11 @@
 				<!-- LOGO -->
 				<div class="bloc-logo"><img src="images/logo/ohmyfood@2x.svg" alt=""></div>
 				<!-- Ville -->
-				<div class="bloc-city"><i class="fa-solid fa-location-dot icon-loc"></i>
-					<p class="size-city">Paris, Belleville</p>
+				<div class="bloc-city">
+					<i class="fa-solid fa-location-dot icon-loc"></i>
+					<input type="text" class="size-city" value="Paris, Belleville">
 				</div>
+				
 				<nav>
 					<div class="reserve">
 						<h1>Réservez le menu qui vous convient </h1>
