hover boutons principaux + ... food items

--- a/a-l-francaise.html
+++ b/a-l-francaise.html
@@ -51,7 +51,7 @@
                         Entrées
                     </p>
                     <div class="food-item">
-                        <div>
+                        <div class="size-item">
                             <p class="marge1">Tartare de poulpe acidulé</p>
                             <p class="marge2">Aux zestes d'orange</p>
                         </div>
