--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 					<p><i class="fa-solid fa-handshake-angle icon-footer"></i> Devenir partenaire</p>
 				</div>
 				<p class="footer3">Mention légales</p>
-				<p class="footer4"> <a href="mailto:contact@ohmyfood.com">Contact</a></p>
+				<span class="footer4"><a href="mailto:contact@ohmyfood.com">Contact</a></span> 
 			</footer>
 		</div>
 		<div class="overlay"></div>
