... ajouté sur les food items

--- a/a-l-francaise.html
+++ b/a-l-francaise.html
@@ -63,7 +63,7 @@
                         </div>
                     </div>
                     <div class="food-item">
-                        <div>
+                        <div class="size-item">
                             <p class="marge1">Velouté de légumes d'antan</p>
                             <p class="marge2">Carotte, panais, topinambour</p>
                         </div>
@@ -76,7 +76,7 @@
                     </div>
 
                     <div class="food-item">
-                        <div>
+                        <div class="size-item">
                             <p class="marge1">Soupe à l'oignon</p>
                             <p class="marge2">Revisitée</p>
                         </div>
@@ -92,7 +92,7 @@
                             PLATS
                         </p>
                         <div class="food-item">
-                            <div>
+                            <div class="size-item">
                                 <p class="marge1">Coquilles Saint-Jacques</p>
                                 <p class="marge2">Accompagnées d'une purée de panais</p>
                             </div>
@@ -105,7 +105,7 @@
                         </div>
 
                         <div class="food-item">
-                            <div>
+                            <div class="size-item">
                                 <p class="marge1">Magret de canard</p>
                                 <p class="marge2">Et parmentier de pommes de terre</p>
                             </div>
@@ -118,7 +118,7 @@
                         </div>
 
                         <div class="food-item">
-                            <div>
+                            <div class="size-item">
                                 <p class="marge1">Pigeonneau d'Ille-et-Vilaine</p>
                                 <p class="marge2">Sur son lit gnocchis aux légumes</p>
                             </div>
@@ -136,7 +136,7 @@
                             </p>
 
                             <div class="food-item">
-                                <div>
+                                <div class="size-item">
                                     <p class="marge1">Pétales de violettes glacés</p>
                                     <p class="marge2">Et purée de noisettes</p>
                                 </div>
@@ -149,7 +149,7 @@
                             </div>
 
                             <div class="food-item">
-                                <div>
+                                <div class="size-item">
                                     <p class="marge1">Fondant au chocolat</p>
                                     <p class="marge2">Revisité</p>
                                 </div>
@@ -162,7 +162,7 @@
                             </div>
 
                             <div class="food-item">
-                                <div>
+                                <div class="size-item">
                                     <p class="marge1">Millefeuille croustillant</p>
                                     <p class="marge2">Myrtilles et pâte d'amande</p>
                                 </div>
