--- a/delice.html
+++ b/delice.html
@@ -51,7 +51,7 @@
                         Entrées
                     </p>
                     <div class="food-item">
-                        <div>
+                        <div class="size-item">
                             <p class="marge1">Tartare de thon</p>
                             <p class="marge2">Assaisonné au yuzu</p>
                         </div>
@@ -65,7 +65,7 @@
                 </div>
 
                 <div class="food-item">
-                    <div>
+                    <div class="size-item">
                         <p class="marge1">Bouchée de homard croustillant</p>
                         <p class="marge2">Et sa farandole de petits légumes</p>
                     </div>
@@ -78,7 +78,7 @@
                 </div>
 
                 <div class="food-item">
-                    <div>
+                    <div class="size-item">
                         <p class="marge1">Poulet rôti aux herbes de Provence</p>
                         <p class="marge2">Et sa crème de truffe</p>
                     </div>
@@ -95,7 +95,7 @@
                         PLATS
                     </p>
                     <div class="food-item">
-                        <div>
+                        <div class="size-item">
                             <p class="marge1">Poulet rôti aux herbes de Provence</p>
                             <p class="marge2">Et sa crème de truffe</p>
                         </div>
@@ -108,7 +108,7 @@
                     </div>
 
                     <div class="food-item">
-                        <div>
+                        <div class="size-item">
                             <p class="marge1">Langouste rôtie</p>
                             <p class="marge2">Et ses légumes de saison</p>
                         </div>
@@ -121,7 +121,7 @@
                     </div>
 
                     <div class="food-item">
-                        <div>
+                        <div class="size-item">
                             <p class="marge1">Côte de boeuf Angus</p>
                             <p class="marge2">Et sa purée de panais</p>
                         </div>
@@ -139,7 +139,7 @@
                         </p>
 
                         <div class="food-item">
-                            <div>
+                            <div class="size-item">
                                 <p class="marge1">Oeuf au plat</p>
                                 <p class="marge2">Assaisonné à la truffe sur lit de caviar</p>
                             </div>
@@ -152,7 +152,7 @@
                         </div>
 
                         <div class="food-item">
-                            <div>
+                            <div class="size-item">
                                 <p class="marge1">Crème brulée</p>
                                 <p class="marge2">Revisitée</p>
                             </div>
@@ -165,7 +165,7 @@
                         </div>
 
                         <div class="food-item">
-                            <div>
+                            <div class="size-item">
                                 <p class="marge1">Tiramisu</p>
                                 <p class="marge2">A la noisette</p>
                             </div>
