--- a/palette.html
+++ b/palette.html
@@ -54,7 +54,7 @@
                     Entrées
                 </p>
                 <div class="food-item">
-                    <div>
+                    <div class="size-item">
                         <p class="marge1">Fricassée d'escargots</p>
                         <p class="marge2">Au piment d'Espelette</p>
                     </div>
@@ -67,7 +67,7 @@
                 </div>
             </div>
             <div class="food-item">
-                <div>
+                <div class="size-item">
                     <p class="marge1">Foie gras de canard mi-cuit</p>
                     <p class="marge2">Et ses copeaux de truffe noire</p>
                 </div>
@@ -80,7 +80,7 @@
             </div>
 
             <div class="food-item">
-                <div>
+                <div class="size-item">
                     <p class="marge1">Oeuf au plat</p>
                     <p class="marge2">Assaisonné à la truffe sur lit de caviar</p>
                 </div>
@@ -98,7 +98,7 @@
                 </p>
 
                 <div class="food-item">
-                    <div>
+                    <div class="size-item">
                         <p class="marge1">Filet de boeuf aux herbes</p>
                         <p class="marge2">Accompagné de sa ribambelle de légumes</p>
                     </div>
@@ -111,7 +111,7 @@
                 </div>
 
                 <div class="food-item">
-                    <div>
+                    <div class="size-item">
                         <p class="marge1">Parmentier de queue de boeuf</p>
                         <p class="marge2">A la truffe noire sur sa purée de panais</p>
                     </div>
@@ -124,7 +124,7 @@
                 </div>
 
                 <div class="food-item">
-                    <div>
+                    <div class="size-item">
                         <p class="marge1">Filet de turbot</p>
                         <p class="marge2">Aux agrumes</p>
                     </div>
@@ -142,7 +142,7 @@
                     </p>
 
                     <div class="food-item">
-                        <div>
+                        <div class="size-item">
                             <p class="marge1">Paris-Brest</p>
                             <p class="marge2">Revisité</p>
                         </div>
@@ -155,7 +155,7 @@
                     </div>
 
                     <div class="food-item">
-                        <div>
+                        <div class="size-item">
                             <p class="marge1">Macaron au chocolat d'exception</p>
                             <p class="marge2">Et glace à la vanille de Madagascar</p>
                         </div>
@@ -168,7 +168,7 @@
                     </div>
 
                     <div class="food-item">
-                        <div>
+                        <div class="size-item">
                             <p class="marge1">Mousse au chocolat</p>
                             <p class="marge2">Au piment d'Espelette et à la truffe noire</p>
                         </div>
