--- a/note.html
+++ b/note.html
@@ -56,7 +56,7 @@
                         Entrées
                     </p>
                     <div class="food-item">
-                        <div>
+                        <div class="size-item">
                             <p class="marge1">Ravioles de foie gras</p>
                             <p class="marge2">Accompagnées de leur crème à la truffe</p>
                         </div>
@@ -70,7 +70,7 @@
                 </div>
 
                 <div class="food-item">
-                    <div>
+                    <div class="size-item">
                         <p class="marge1">Caviar osciètre</p>
                         <p class="marge2">Sur blini à la farine de blé noir</p>
                     </div>
@@ -83,7 +83,7 @@
                 </div>
 
                 <div class="food-item">
-                    <div>
+                    <div class="size-item">
                         <p class="marge1">Homard et espuma de potiron</p>
                         <p class="marge2">Marinés aux zestes d'orange</p>
                     </div>
@@ -96,7 +96,7 @@
                 </div>
 
                 <div class="food-item">
-                    <div>
+                    <div class="size-item">
                         <p class="marge1">Foie gras de canard cuit entier</p>
                         <p class="marge2">Confiture de figue et pain toasté</p>
                     </div>
@@ -113,7 +113,7 @@
                         PLATS
                     </p>
                     <div class="food-item">
-                        <div>
+                        <div class="size-item">
                             <p class="marge1">Noix de coquilles Saint-Jacques</p>
                             <p class="marge2">Sur lit de purée de céleri-rave</p>
                         </div>
@@ -126,7 +126,7 @@
                     </div>
 
                     <div class="food-item">
-                        <div>
+                        <div class="size-item">
                             <p class="marge1">Langoustine poêlée</p>
                             <p class="marge2">Purée de patate douce</p>
                         </div>
@@ -139,7 +139,7 @@
                     </div>
 
                     <div class="food-item">
-                        <div>
+                        <div class="size-item">
                             <p class="marge1">Mijoté de queue de boeuf</p>
                             <p class="marge2">Et riz sauvage aux zestes de citron</p>
                         </div>
@@ -157,7 +157,7 @@
                         </p>
 
                         <div class="food-item">
-                            <div>
+                            <div class="size-item">
                                 <p class="marge1">Macaron noisette et chocolat</p>
                                 <p class="marge2">Glace au caramel brun et sel de Guérande</p>
                             </div>
@@ -170,7 +170,7 @@
                         </div>
 
                         <div class="food-item">
-                            <div>
+                            <div class="size-item">
                                 <p class="marge1">Baba au rhum revisité</p>
                                 <p class="marge2">Avec son coulis de citron</p>
                             </div>
@@ -183,7 +183,7 @@
                         </div>
 
                         <div class="food-item">
-                            <div>
+                            <div class="size-item">
                                 <p class="marge1">Tarte au citron meringuée</p>
                                 <p class="marge2">Destructurée</p>
                             </div>
